# ai_emotion

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py  setup.bat  setup.py  start.bat  start.sh
config/: logging.conf  settings.py
docker/grafana/dashboards/: avatar-main-dashboard.json  dashboard-config.yml
docker/grafana/datasources/: prometheus.yml
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
scripts/: backup.sh  deploy.sh  restore.sh
static/css/: style.css
static/images/: README.md
static/js/: script.js
static/videos/: README.md  README_UPDATED.md
templates/: index.html
utils/: __init__.py  content_recommender.py  memory_manager.py  security.py  text_processing.py
